--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<title>git 教程</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<body>
-		<h3>这是html文件</h3>
+		<h3>这是html文件 修改index文件</h3>
 	</body>
 </html>
