--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>git 教程</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<body>
-		<h3>这是html文件 version 1.0 这是版本3.0</h3>
+		<h3>这是html文件 version 1.0 这是版本1.0</h3>
+		<h4> this is master</h4>
 	</body>
 </html>
